updating styling and adding ingredients and recipes

--- a/frontend/data/createRecipe.html
+++ b/frontend/data/createRecipe.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="./createRecipe.css" />
 <script src="./createRecipe.js"></script>
 
 <div class="label">Recipe Name</div>
@@ -8,5 +9,12 @@
 
 <div class="label">Tags</div>
 <input type="text" class="tags">
+
+<div class="container ingredients">
+    <button type="button" class="add-ingredient">Add Ingredient</button>
+</div>
+
+<div class="label">Instructions</div>
+<textarea class="body"></textarea>
 
 <button type="button" class="create-button">Create</button>
