added viewRecipe that shows up when you click a recipe from the list

--- a/frontend/data/listRecipes.html
+++ b/frontend/data/listRecipes.html
@@ -1,5 +1,10 @@
 <link rel="stylesheet" type="text/css" href="./listRecipes.css" />
 <script src="./listRecipes.js"></script>
-
+<title>List Recipes</title>
+<h1>List Recipes</h1>
+<div id="search">
+    <input id="searchRecipes" type="text" placeholder="Search Recipes">
+    <button type="button" class="search">Search</button>
+</div>
 <div id="recipes-list">
 </div>
