--- a/frontend/data/createRecipe.html
+++ b/frontend/data/createRecipe.html
@@ -1,6 +1,8 @@
 <link rel="stylesheet" type="text/css" href="./createRecipe.css" />
 <script src="./createRecipe.js"></script>
 
+<title>Create A Recipe</title>
+<h1>Create A Recipe</h1>
 <div class="label">Recipe Name</div>
 <input type="text" class="recipe-name">
 
